# bazel_rules_raylib

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  extensions.bzl  flake.nix  non_module_dependencies.bzl  repositories.bzl
.bcr/: metadata.template.json
.github/workflows/: tag-and-release.yml  test.yml
integration/: .bazelrc  BUILD.bazel  MODULE.bazel  glu.patch
tools/: bazel
